tests/testcases/errors/BCE0081-5.boo
"""
BCE0081-5.boo(12,13): BCE0081: A raise statement with no arguments is not allowed outside an exception handler.
"""
print('start')

try:
	raise "an exception"
except:
	print('exception')
	a = def ():
		try:
			raise
		except:
			raise
print('end')

